plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.115'
    id 'idea'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven { url "https://maven.architectury.dev/" }
    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://repo.repsy.io/coolerpromc/maven/"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge   {
    version = project.neo_version

    validateAccessTransformers = true

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    modCompileOnly("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    modImplementation("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")

    modImplementation("dev.architectury:architectury-forge:${architectury_version}")
    modImplementation("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
    modCompileOnly("me.shedaniel:RoughlyEnoughItems-api-forge:${rei_version}")
    modCompileOnly("me.shedaniel:RoughlyEnoughItems-forge:${rei_version}")

    modImplementation("curse.maven:arrow-1317209:7297200")
}

mixin {
    add sourceSets.main, 'fletchingrecipe.mixins.refmap.json'
    config 'fletchingrecipe.mixins.json'
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            groupId = groupId
            artifactId = mod_id
            version = mod_version
            from components.java
        }
    }
    repositories {
        mavenLocal()
        maven {
            url = findProperty("repsy_url")
            credentials {
                username = findProperty("repsy_username")
                password = findProperty("repsy_password")
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

jar {
    manifest.attributes([
            "MixinConfigs": "fletchingrecipe.mixins.json"
    ])
}

publishMods {
    file.set(jar.archiveFile)
    type = STABLE
    modLoaders.add("forge")
    changelog = file("changelog.md").text
    displayName = mod_id + "-" + mod_version

    curseforge {
        projectId = "1364606"
        accessToken = findProperty("CF_TOKEN")
        minecraftVersions.add(minecraft_version)
    }

    modrinth {
        projectId = 'nDfK7W8j'
        accessToken = findProperty("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
    }
}